--- a/apps/images/templates/images/list.html
+++ b/apps/images/templates/images/list.html
@@ -1,24 +1,13 @@
-{% load staticfiles %} <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Images</title>
-    <style>
-      img {
-        max-width: 200px;
-        max-height: 200px;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Images</h1>
-    <div>
+{% extends 'core/base.html' %}
+
+{% block content %}
+<div class="container-fluid">
+  <h1>Images</h1>
+  <div>
     <a href="{% url 'file_upload' %}">Upload Images</a>
-    </div>
-    {% for image in images %} 
-      <img src="{{ image.image.url }}" />
-    {% endfor %}
-  </body>
-</html>
+  </div>
+  {% for image in images %}
+    <img src="{{ image.image.url }}" />
+  {% endfor %}
+</div>
+{% endblock %}
