--- a/apps/images/templates/images/upload.html
+++ b/apps/images/templates/images/upload.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Upload Images</title>
-</head>
-    <body>
-        <form action="{% url 'file_upload' %}" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" />
-        </form>
-    </body>
-</html>
+{% extends 'core/base.html' %}
+
+{% block content %}
+<div class="container">
+    <form action="{% url 'file_upload' %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" />
+    </form>
+</div>
+{% endblock content %}
