--- a/web/apps/images/templates/images/list.html
+++ b/web/apps/images/templates/images/list.html
@@ -9,5 +9,22 @@
   {% for image in images %}
     <a href="{% url "image" image.pk %}"><img src="{{ image.image.url }}" /></a>
   {% endfor %}
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      {% if page_obj.has_previous %}
+      <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+      {% endif %}
+      {% for pg in paginator.page_range %}
+      {% if page_obj.number == pg %}
+      <li class="active"><a class="page-link" href="?page={{ pg }}">{{ pg }}</a></li>
+      {% else %}
+      <li class="page-item"><a class="page-link" href="?page={{ pg }}">{{ pg }}</a></li>
+      {% endif %}
+      {% endfor %}
+      {% if page_obj.has_next %}
+      <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+      {% endif %}
+    </ul>
+  </nav>
 </div>
 {% endblock %}
